# Decentralized-Accounting

./: Accounting.cabal  README.md  cabal.project
dist-newstyle/cache/: compiler  config  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.4.20210212/: Accounting-0.1.0.0-inplace.conf  package.cache
dist-newstyle/src/: Win32-net_-e9415802910225c6.cache  cardano-a_-69e96f3eceed3ed5.cache  cardano-b_-c0de99f0ccd585cd.cache  cardano-c_-88a67c41a056383c.cache  cardano-c_-e62f2aeae532ef4f.cache  cardano-l_-793ecdcee1fc1ce7.cache  cardano-n_-17dfc790a23ed210.cache  cardano-p_-98329c466570048a.cache  cardano-w_-c9e033b0ec7ad11b.cache  flat-5d3bff3e9951fc1.cache  goblins-7fe4f5e9bbbd1224.cache  hedgehog-_-d2bdd077e79afffb.cache  iohk-moni_-c7ca6b005d6f76c5.cache  optparse-_-5b3aca9bcb30ab3a.cache  ouroboros_-268d3b2310e5b441.cache  plutus-3b55de0732f6b166.cache  plutus-ap_-cbcc5c6ab544aad6.cache  purescrip_-fa901c7e00b7f37b.cache  servant-p_-232829bf471577c2.cache
src/: Account.hs  Trace.hs  Trace2.hs
